fix css class, hide in toc settings

--- a/docs/assets/css/opencdms.css
+++ b/docs/assets/css/opencdms.css
@@ -1,5 +1,5 @@
 /* Temporary: `-hide: toc` is not working */
-.md-sidebar--secondary .md-sidebar__scrollwrap {
+.md-main__inner .md-sidebar--secondary {
     display: none !important;
 }
 
