Update primary nav with links to api, demo and docs

--- a/material/partials/opencdms_menubar.html
+++ b/material/partials/opencdms_menubar.html
@@ -12,27 +12,19 @@
             ABOUT
           </a>
         </li>
-<!--        <li class="md-tabs__item">
-          <b> » </b>
-        </li>-->
         <li class="md-tabs__item">
-          <a href="/users/" class="md-tabs__link">
-            USERS
+          <a href="https://api.opencdms.org/" class="md-tabs__link">
+            API
           </a>
         </li>
         <li class="md-tabs__item">
-          <a href="/developers/" class="md-tabs__link">
-            DEVELOPERS
+          <a href="https://app.opencdms.org" class="md-tabs__link">
+            DEMO
           </a>
         </li>
         <li class="md-tabs__item">
-          <a href="/experts/" class="md-tabs__link">
-            EXPERTS
-          </a>
-        </li>
-        <li class="md-tabs__item">
-          <a href="/organisations/" class="md-tabs__link">
-            ORGANISATIONS
+          <a href="https://docs.opencdms.org" class="md-tabs__link">
+            DOCUMENTATION
           </a>
         </li>
     </ul>
