Update primary nav for external links

--- a/material/partials/opencdms_menubar.html
+++ b/material/partials/opencdms_menubar.html
@@ -14,17 +14,17 @@
         </li>
         <li class="md-tabs__item">
           <a href="https://api.opencdms.org/" class="md-tabs__link">
-            API
+            » API DEMO «
           </a>
         </li>
         <li class="md-tabs__item">
-          <a href="https://app.opencdms.org" class="md-tabs__link">
-            DEMO
+          <a href="https://beta.opencdms.org" class="md-tabs__link">
+            » APP DEMO «
           </a>
         </li>
         <li class="md-tabs__item">
           <a href="https://docs.opencdms.org" class="md-tabs__link">
-            DOCUMENTATION
+            » DOCUMENTATION «
           </a>
         </li>
     </ul>
