Rename ACP Project as ClimSA Project and update section

--- a/material/partials/opencdms_menubar.html
+++ b/material/partials/opencdms_menubar.html
@@ -12,19 +12,20 @@
             ABOUT
           </a>
         </li>
+        <li class="md-tabs__item"> || </li>
         <li class="md-tabs__item">
           <a href="https://api.opencdms.org/" class="md-tabs__link">
-            » API DEMO «
+            API DEMO
           </a>
         </li>
         <li class="md-tabs__item">
           <a href="https://beta.opencdms.org" class="md-tabs__link">
-            » APP DEMO «
+            APP DEMO
           </a>
         </li>
         <li class="md-tabs__item">
           <a href="https://docs.opencdms.org" class="md-tabs__link">
-            » DOCUMENTATION «
+            DOCUMENTATION
           </a>
         </li>
     </ul>
