Add DATABASE DEMO to opencdms.org

--- a/material/partials/opencdms_menubar.html
+++ b/material/partials/opencdms_menubar.html
@@ -24,6 +24,11 @@
           </a>
         </li>
         <li class="md-tabs__item">
+          <a href="http://db.opencdms.org:8978" class="md-tabs__link">
+            DATABASE DEMO
+          </a>
+        </li>
+        <li class="md-tabs__item">
           <a href="https://docs.opencdms.org" class="md-tabs__link">
             DOCUMENTATION
           </a>
